decrement-app/increment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcenter-increment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webcenter-increment
  template:
    metadata:
      labels:
        app: webcenter-increment
    spec:
      containers:
      - name: webcenter-increment
        image: gcr.io/di-services/testimages/incrementer:latest  # the image we created
        ports:
        - containerPort: 8080
