decrement-app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcenter-increment-service
spec:
  selector:
    app: webcenter-increment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: webcenter-decrement-service
spec:
  selector:
    app: webcenter-decrement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
