decrement-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Use the appropriate ingress class
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - redis-app.services.deepinstinctweb.com  # Replace with your actual host
      secretName: tls-secret  # TLS secret for HTTPS
  rules:
    - host: redis-app.services.deepinstinctweb.com  # Replace with your actual host
      http:
        paths:
        - pathType: Prefix
          path: "/increment"
          backend:
            service:
              name: redis-incrementer-service
              port:
                number: 80
        - pathType: Prefix
          path: "/decrement"
          backend:
            service:
              name: redis-decrementer-service
              port:
                number: 80
